clusters/dependent/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: podinfo.mkl.lol
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: podinfo
            port:
              number: 9898
  - host: nginx.mkl.lol
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx
            port:
              number: 80
  tls:
  - hosts:
    - podinfo.mkl.lol
    secretName: podinfo-mkl-lol-tls
  - hosts:
    - nginx.mkl.lol
    secretName: nginx-mkl-lol-tls
---
